--- a/code/Heatmap_gallery.Rmd
+++ b/code/Heatmap_gallery.Rmd
@@ -1,18 +1,19 @@
 ---
 title: "Travel Heatmap Gallery"
-author: "Rachael Caelie (Rocky) Aikens"
+author: "Rachael Caelie (Rocky) Aikens and Elizabeth Chin"
 date: "5/24/2019"
 output: html_document
 ---
 
 ```{r setup, warning=FALSE, message = FALSE, include = FALSE}
 knitr::opts_chunk$set(cache=TRUE, warning = FALSE, message = FALSE, echo = FALSE, fig.align = "center", fig.height = 4)
-require(ggplot2)
-require(dplyr)
-require(gridExtra)
-require(ggpubr)
+library(ggplot2)
+library(dplyr)
+library(gridExtra)
+library(ggpubr)
 theme_set(theme_light())
 source("build_heatmaps.R")
+source("build_interactive.R")
 ```
 
 # Set Up
@@ -31,34 +32,21 @@ CA_census <- get_acs(geography = "tract",
 
 One thing to note is that Rmarkdown and leaflet don't seem to play well together.
 
-# Geometric Distance
+# Geodesic Distance
 
 The plots below show geometric distance to the nearest general acute care facility.
 
 ```{r}
-# Load data on hospitals, distances, and cesus tract info
-GAC_df <- read_csv("../data/hospDataClean.csv") %>% filter(TYPE_LIC == "General Acute Care")
-GAC_geometric <- read_csv("../data/GeoDistances.csv")
-
-
-make_map(CA_census, GAC_geometric, GAC_df)
+hosp_df <- read_csv("../data/hospDataClean.csv")
+distance_df <- read_csv("../data/GeoDistances.csv")
+make_map(CA_census, distance_df, hosp_df)
 ```
 
-# Travel Time to Primary Care
-
-## Congested
+# Travel time
 
 ```{r}
-pcc_df <- read_csv("../data/pccDataClean.csv")
-pcc_congested <- read_csv("../data/mapTimes_primaryCare_congested.csv")
+travel_df <- read_csv("../data/map_times_hosptials_noncongested.csv")
+
+build_heatmap()
 ```
-
-
-```{r}
-make_map(CA_census, pcc_congested, pcc_df)
-```
-
-
-
-## Not Congested
 
