--- a/code/Heatmap_gallery.Rmd
+++ b/code/Heatmap_gallery.Rmd
@@ -45,6 +45,7 @@ make_map(CA_census, distance_df, hosp_df)
 # Travel time
 
 ```{r}
+source("build_interactive.R")
 travel_df <- read_csv("../data/map_times_hosptials_noncongested.csv")
 
 build_heatmap(CA_census, travel_df, hosp_df, "Hospital travel time in minutes", "travel_change_hospital_noncongested.csv")
