--- a/code/Heatmap_gallery.Rmd
+++ b/code/Heatmap_gallery.Rmd
@@ -46,7 +46,8 @@ make_map(CA_census, distance_df, hosp_df)
 
 ```{r}
 source("build_interactive.R")
-travel_df <- read_csv("../data/map_times_hosptials_noncongested.csv")
+hosp_df <- read_csv("../data/safetynetDataClean.csv")
+travel_df <- read_csv("../data/map_times_safetynet_noncongested.csv")
 
 build_heatmap(CA_census, travel_df, hosp_df, "Hospital travel time in minutes", "travel_change_hospital_noncongested.csv")
 ```
